# oop_additional_tasks

./: pyproject.toml
lesson1/: albums.py  bottle.py  number.py
lesson2/: bankaccount.py  person.py  rectangle.py  user.py
lesson3/: counter.py  fraction.py  logger.py  mylist.py  mylist2.py  point.py  timer.py
lesson4/: animal.py  animal_2.py  car.py  employee.py  employee_2.py  person.py  shape.py
lesson5/: bird.py  cars.py  person.py  student.py
lesson6/: cars.py  employee.py  student.py
