[tool.poetry]
name = "oop-additional-tasks"
version = "0.1.0"
description = ""
authors = ["Denis Khudyakov <denis.hudyakov27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^69.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
